fixed download image height on mobile

--- a/authorization_code/public/styles.css
+++ b/authorization_code/public/styles.css
@@ -398,7 +398,7 @@ padding-top: 100px;
   }
 
   #cloudContainer {
-    height: 500px;
+    height: 320px;
     width: 300px;
     object-fit: scale-down;
     padding-left: 0px;
